# Analyzing-a-real-estate-investment

./: .gitignore  README.md  railway.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  deploy-prod.yml  deploy-staging.yml  frontend-ci.yml  ml-retrain.yml
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_initial_schema.py
backend/models_artifacts/: README.md
backend/scripts/: entrypoint.sh  init_postgis.sql  load_test.py  run_admin_population_2024.py
backend/src/: __init__.py  main.py
backend/src/analysis/: __init__.py
backend/src/analysis/common/: __init__.py  normalizer.py  validators.py
backend/src/analysis/scenario_a/: __init__.py  compensation_model.py  impact_zone.py  road_impact.py
backend/src/analysis/scenario_b/: __init__.py  correlation.py  lead_lag.py  three_variable.py
backend/src/analysis/scenario_c/: __init__.py  candidate_finder.py  feature_engineering.py  impact_analyzer.py  rationale_generator.py  similarity_search.py  suitability_model.py  value_predictor.py
backend/src/analysis/similarity/: __init__.py  feature_extractor.py  matcher.py  recommender.py
backend/src/analysis/training/: __init__.py  _mlflow_helpers.py  build_faiss_index.py  train_suitability.py  train_value_predictor.py
backend/src/api/: __init__.py  cache.py  deps.py
backend/src/api/v1/: analysis.py  predictions.py  projects.py  recommendations.py  roads.py  router.py  stores.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  metrics.py  redis_client.py  security.py
backend/src/etl/: __init__.py  admin_population.py  building_registry.py  building_registry_molit.py  common.py  geocoder.py  land_characteristics.py  land_price.py  molit_real_estate.py
backend/src/etl/store_scraper/: __init__.py  base.py  mcdonalds.py  run.py  starbucks.py
backend/src/ml/: __init__.py  feature_store.py  monitoring.py  registry.py
backend/src/models/: __init__.py  admin_area.py  analysis.py  base.py  building.py  candidate.py  enums.py  impact.py  land_price.py  population.py  project.py  road.py  store.py  store_feature.py  traffic.py  transaction.py
backend/src/repositories/: __init__.py
backend/src/schemas/: __init__.py  analysis.py  common.py  project.py  road.py  store.py
backend/src/scripts/: __init__.py  enrich_seed_coords.py  seed.py
backend/src/scripts/seed_data/: __init__.py  admin_areas.py  projects.py  roads.py  store_coords_verified.json  stores.py
backend/src/services/: __init__.py
backend/tests/: conftest.py
backend/tests/test_analysis/: test_common.py  test_registry.py  test_scenario_a.py  test_scenario_b.py  test_scenario_c.py  test_similarity.py
backend/tests/test_api/: test_analysis_endpoints.py  test_docs.py  test_health.py  test_v1_routers.py
backend/tests/test_core/: test_logging.py
backend/tests/test_etl/: test_admin_population.py  test_building_registry.py  test_building_registry_molit.py  test_geocoder.py  test_land_characteristics.py  test_land_price.py  test_molit.py  test_placeholder.py  test_store_scraper.py
backend/tests/test_models/: test_base.py  test_models_integration.py  test_relationships.py
docs/: architecture.md  deploy.md  deployment.md  incident-postmortem-template.md  ml-ops.md  runbook.md  security-checklist.md  step4-deploy.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vercel.json  vite.config.ts
frontend/public/triangle-lab/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analysis.ts  client.ts  predictions.ts  projects.ts  recommendations.ts  roads.ts  schemas.ts  stores.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/__tests__/: ModeToggle.test.tsx
frontend/src/hooks/: useProjects.ts  useRecommendations.ts  useRoads.ts  useScenarioC.ts  useStores.ts  useUrlParam.ts
frontend/src/lib/: cn.ts  format.ts
frontend/src/pages/: OverviewPage.tsx  RecommendPage.tsx  ScenarioAPage.tsx  ScenarioBPage.tsx  ScenarioCPage.tsx
frontend/src/test/: msw-server.ts  setup.ts  test-utils.tsx
frontend/src/theme/: scenarios.ts
(+20 files in other folders)
