[tool.poetry]
name = "realestate-analyzer-backend"
version = "0.1.0"
description = "Real Estate Investment Analysis Platform — Scenarios A (compensation impact), B (road/population/traffic), C (DT/DI store siting)."
authors = ["RealEstate Analyzer Team <hokeunpark.hp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
python-multipart = "^0.0.9"

# Persistence
sqlalchemy = { extras = ["asyncio"], version = "^2.0.27" }
asyncpg = "^0.29.0"
# Sync driver for Alembic. The app itself only ever uses asyncpg, but
# Alembic's online migrations talk to Postgres synchronously and refuse
# to start without ``psycopg2`` (or ``psycopg2-binary``) on the path.
# We use the binary build to skip the libpq compile on slim images.
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
geoalchemy2 = "^0.14.3"
redis = "^5.0.1"

# Validation / settings
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# HTTP / scraping
httpx = "^0.27.0"
selectolax = "^0.3.20"
tenacity = "^8.2.3"

# Data
pandas = "^2.2.0"
numpy = "^1.26.0"
geopandas = "^0.14.3"
shapely = "^2.0.2"

# ML
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
faiss-cpu = "^1.7.4"
prophet = "^1.1.5"
shap = "^0.44.0"
statsmodels = "^0.14.1"
mlflow = "^2.10.0"
joblib = "^1.3.2"

# Observability
structlog = "^24.1.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.40.0" }
prometheus-fastapi-instrumentator = "^6.1.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
types-redis = "^4.6.0.20240106"

[tool.poetry.group.optional.dependencies]
playwright = "^1.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ─── Tooling ────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["alembic/versions", "notebooks", "models_artifacts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "BLE",  # blind-except (so `# noqa: BLE001` actually toggles something)
    "T20",  # print/pprint detection in library code (CLI scripts opt out)
    "PLC0415",  # local imports (so noqa toggles work)
]
ignore = [
    "B008",    # function call in default argument (FastAPI Depends pattern)
    "RUF001",  # Korean / Unicode in strings is intentional (서울, ×, etc.)
    "RUF002",  # same — Unicode in docstrings
    "RUF003",  # same — Unicode in comments
    "UP042",   # str + Enum is fine on 3.11; StrEnum requires 3.11+ but breaks on subclassing in some libs
    "N818",    # `Error` suffix on exceptions — `KillSwitchActivated` reads better
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "BLE001", "T201", "PLC0415"]
"alembic/env.py" = ["E402"]
"src/scripts/**" = ["N806", "T201"]
"src/etl/**" = ["N806"]
# Training scripts use sklearn-style ``X`` and SQLAlchemy ``Session`` factories.
"src/analysis/training/**" = ["N803", "N806", "BLE001"]
# ML wrappers (sklearn/xgboost API) keep ``X`` for consistency with the ecosystem.
"src/analysis/scenario_c/suitability_model.py" = ["N803", "N806"]
# MLflow helpers swallow exceptions intentionally — calls must never fail training.
"src/analysis/training/_mlflow_helpers.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_decorators = false  # FastAPI route decorators are untyped
exclude = ["alembic/versions", "notebooks", "tests"]

[[tool.mypy.overrides]]
module = ["faiss.*", "prophet.*", "shap.*", "xgboost.*", "geoalchemy2.*", "selectolax.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
